talleres/08/3-network-policy/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: 2-serviceaccount-namespace
spec:
  containers:
  - name: debug-container
    image: busybox
    command: ["sleep", "3600"]
